# qn-graph

./: .gitignore  CMakeLists.txt  README.md
src/: QNApplication.cpp  QNApplication.hpp  QNDekart.cpp  QNDekart.hpp  QNInit.cpp  QNInit.hpp  QNSETTINGS.hpp  QnFileDialog.hpp  QnObject.hpp  QnPlotter.cpp  QnPlotter.hpp  QnTexture.cpp  QnTexture.hpp  main.cpp
src/Algorithms/: WuAlgorithm.hpp
src/Linalg/: Poly.cpp  Poly.hpp
src/Linalg/Approximation/: Approximation.hpp
src/Linalg/Interpolation/: Interpolation.hpp
src/Linalg/Matrix/: Matrix.hpp
src/Linalg/SLE/: SLE.hpp
src/MathParser/: BinaryExpression.hpp  CVExpression.hpp  CVTable.hpp  Expression.hpp  FuncExpression.hpp  FunctionTable.hpp  Lexer.cpp  Lexer.h  MathParser.cpp  MathParser.hpp  NumberExpression.hpp  Parser.cpp  Parser.hpp  Settings.hpp  Token.h  TokenType.h  UnaryExpression.h
src/Widgets/: QnButton.cpp  QnButton.hpp  QnEdit.cpp  QnEdit.hpp  QnViewPort.hpp
